<resources>
    <string name="app_name">Inventory Tracker</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="initial_quantity">Initial Quantity</string>
    <string name="delete_item">Delete Item</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="create_acc_empty">Please enter a name and quantity</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="sms_perms_rationale">SMS permissions are needed to send low stock notifications.</string>
    <string name="sign_out_confirm">Are you sure you want to sign out?</string>
    <string name="sms_accepted">SMS notifications enabled</string>
    <string name="sms_denied">SMS notifications denied</string>
    <string name="enter_user_pass">Please enter an email and password</string>
    <string name="invalid_user_pass">Invalid email or password</string>
    <string name="account_created">Account created! You can now log in.</string>
    <string name="username_exists">An account with this email already exists.</string>
    <string name="user_not_found">No account found with this email</string>
    <string name="database_error">An error occurred. Please try again.</string>
    <string name="qty">"Qty: "</string>
    <string name="update_item_empty">Please enter a name and quantity</string>
    <string name="add_item_failed">An error occurred while adding the item. Please try again.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="initial_qty">Initial Qty</string>
    <string name="quantity">Quantity</string>
    <string name="example_item">Example Item</string>
    <string name="description">Description</string>
    <string name="update_item_failed">An error occurred while updating the item. Please try again.</string>
    <string name="quantity_overflow">Quantity is too high! Maximum quantity is 2,147,483,647.</string>
    <string name="qty_0">Qty: 0</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="cannot_decrease">Cannot decrease quantity below 0</string>
    <string name="delete_item_failed">An error occurred while deleting the item. Please try again.</string>
    <string name="get_items_failed">An error occurred while retrieving items. Please try again.</string>
    <string name="low_stock_noti_sent_for">"Low stock notification sent for: "</string>
    <string name="delete_confirmation">"Are you sure you want to delete "</string>
    <string name="quantity_history">Quantity History</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="invalid_quantity">Please enter a valid quantity</string>
    <string name="org_setup_title">Set up your organization</string>
    <string name="org_create_subtitle">Create a new organization</string>
    <string name="org_join_subtitle">Or join an existing organization</string>
    <string name="org_name">Organization name</string>
    <string name="invite_code">Invite code</string>
    <string name="join">Join</string>
    <string name="org_name_empty">Please enter an organization name</string>
    <string name="invite_code_empty">Please enter an invite code</string>
    <string name="invite_code_invalid">No organization found with that invite code</string>
    <string name="org_operation_failed">An error occurred. Please try again.</string>
    <string name="invite_code_dialog_title">Your organization is ready</string>
    <string name="invite_code_dialog_message">Share this code with other users so they can join your organization:\n\n%1$s\n\nYou can also find it later in Firebase.</string>
    <string name="ok">OK</string>
</resources>