<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview1"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true"
    android:backgroundTint="?attr/cardBackgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/item_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonDelete"
            app:layout_constraintBottom_toTopOf="@+id/counterWidget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:text="@string/example_item"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="?attr/contentColor"/>

        <ImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_icon"
            app:tint="@color/red"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/counterWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/buttonDecrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/minus_icon"
                app:tint="@android:color/black"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/decrease_quantity"/>

            <TextView
                android:id="@+id/item_quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty_0"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="16dp"/>

            <ImageButton
                android:id="@+id/buttonIncrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/plus_icon"
                app:tint="@android:color/black"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/increase_quantity"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>