<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/app_name"
                android:textAppearance="?attr/textAppearanceLabelLarge" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="320dp"
                android:minHeight="48dp"
                android:layout_marginBottom="15dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="320dp"
                android:minHeight="48dp"
                android:layout_marginBottom="25dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text=""
                android:textColor="?attr/colorError"
                android:visibility="visible" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/loginProgressSpinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="?attr/colorPrimary"
                android:minWidth="320dp"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonCreateAccount"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="?attr/colorSecondary"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>